cabeçalho das tabelas fixo + flex-wrap

--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -191,6 +191,21 @@ main {
 		margin-bottom: 100px;
 		border-collapse: collapse;
 
+		&.thead-fixo{
+			position: fixed;
+			top: 0;
+			margin: 0;
+			border-bottom: none;
+			z-index: 2;
+			display: none;
+			tbody, tfoot, caption{
+				display: none;
+			}
+			&.db{
+				display: table;
+			}
+		}
+
 
 		caption{
 			width: 100%;
@@ -312,9 +327,11 @@ main {
 
 		&.mais-de-3-anexos{
 			@include justify-content(space-between);
+			@include flex-wrap(wrap);
 			a{
 				width: 250px;
 				height: 250px;
+				margin-bottom: 1em;
 			}
 		}
 	}
